# com-master

./: CMakeLists.txt  README.md  ly-serial-tool.desktop  update-translations.sh
.github/: dependabot.yml
.github/workflows/: build-windows.yml  build.yml
assets/: resources.qrc
assets/desktop/: com-master.desktop  ly-serial-tool.desktop
assets/icons/windows/: win_resources.rc
debian/: changelog  control  copyright  watch
include/: common.h
myresource/inc/: appcolors.h  myresource.h  pageconnectiondialog.h  pageftpclient.h  pageiec61850client.h  pagemain.h  pagenetworktool.h  pageserialterminal.h  pageserialtransceiver.h  pagesshclient.h  pagetabcontent.h  pageterminal.h  pagetransceiver.h  pageverifiydialog.h  qtinclude.h
myresource/inc/customwidgets/: customlineedit.h  customspinbox.h  customtextedit.h
myresource/src/customwidgets/: customlineedit.cpp  customspinbox.cpp  customtextedit.cpp
myresource/src/page/: pageconnectiondialog.cpp  pageftpclient.cpp  pageiec61850client.cpp  pagemain.cpp  pagenetworktool.cpp  pageserialterminal.cpp  pageserialtransceiver.cpp  pagesshclient.cpp  pagetabcontent.cpp  pageterminal.cpp  pageterminal.ui  pagetransceiver.cpp  pagetransceiver.ui  pageverifiydialog.cpp  pageverifiydialog.ui
myresource/src/translations/: com-master_en.ts  com-master_zh_CN.ts  ly-serial-tool_en.ts  ly-serial-tool_zh_CN.ts
src/: main.cpp
tools/: code-format.cfg  code-format.py
